WP-7979 WP-7990 Related Items alignment fixed

--- a/sass/conditionals/insights/related-to-idea-story.sass
+++ b/sass/conditionals/insights/related-to-idea-story.sass
@@ -311,16 +311,12 @@
 .group-wrapper-related .field-name-field-person-ref-unlimited .person-position .field-collection-item-field-staff-item .field-name-field-department-office
   padding-left: 54px
 
-.field-name-field-related-faculty .node-faculty .person-position, .field-name-field-related-faculty .node-faculty .person-name
+.field-name-field-related-faculty .node-faculty div.person-position, .field-name-field-related-faculty .node-faculty .person-name, .faculty-author-wrapper .node-faculty div.person-position, .faculty-author-wrapper .node-faculty .person-name, .group-wrapper-related .field-name-field-person-ref-unlimited .field-name-title
   width: 160px
   float: left
   
-.field-name-field-related-faculty .node-faculty span.person-position 
+.field-name-field-related-faculty .node-faculty span.person-position, .faculty-author-wrapper .node-faculty span.person-position
   width: auto !important
 
-.faculty-author-wrapper .node-faculty .person-position, .faculty-author-wrapper .node-faculty .person-name
-  width: 160px
-  float: left
-
-.faculty-author-wrapper .node-faculty span.person-position
-  width: auto !important
+.group-wrapper-related .field-name-field-person-ref-unlimited .field-name-title
+  display: block !important
